--- a/style.css
+++ b/style.css
@@ -4,15 +4,13 @@ body {
     line-height: 1;
   }
   
-  textarea {
-    background: transparent;
-    border: none;
-    resize: none;
-    color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
+  .container {
+    margin: auto;
+    margin-bottom: 5%;
+    margin-top: 5%;
   }
-  
+
+
   .jumbotron {
     text-align: center;
     background-color: transparent;
@@ -21,19 +19,21 @@ body {
     border-bottom: 10px solid black;
   }
   
-  .description {
-    white-space: pre-wrap;
-  }
-  
-  .time-block {
-    text-align: center;
-    border-radius: 15px;
-  }
+
   
   .row {
     white-space: pre-wrap;
     height: 80px;
     border-top: 1px solid white;
+  }
+
+  .description {
+    white-space: pre-wrap;
+  }
+
+  .time-block {
+    text-align: center;
+    border-radius: 15px;
   }
   
   .hour {
@@ -41,7 +41,30 @@ body {
     color: #000000;
     border-top: 1px dashed #000000;
   }
+
+
+textarea {
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
+  }
+
+  .saveBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #06aed5;
+    color: white;
+  }
   
+  .saveBtn i:hover {
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+  }
+
   .past {
     background-color: #d3d3d3;
     color: white;
@@ -57,16 +80,6 @@ body {
     color: white;
   }
   
-  .saveBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06aed5;
-    color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
-  }
+
+ 
   
